--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                 <template v-if="currentWord">
                     <div class="word-card" @click="toggleTranslation">
-                        <div class="word">{{ currentWord.aramic }}</div>
+                        <div class="word">{{ currentWord.aramaic }}</div>
                         <div v-if="showTranslation" class="translation">{{ currentWord.hebrew }}</div>
                     </div>
                     <div class="control-buttons">
